languages/montiarc-fe/src/test/resources/contextconditions/valid/DefaultParametersHaveRightOrder.arc
package valid;


component DefaultParametersHaveRightOrder(int x, int y = 5) {

}